--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 * {
+    font-family: Arial, Helvetica, sans-serif;
+
     box-sizing: border-box;
 }
 
@@ -36,17 +38,27 @@ h1 {
     z-index: 3;
 }
 
-button {
+p {
+    margin: 0;
+    margin-bottom: 15px;
+
+    padding: 0;
+}
+
+form {
     background-color: rgba(25, 25, 100, .5);
     color: white;
-    cursor: pointer;
 
     padding: 20px 30px;
-    font-size: 30px;
+    font-size: 1.5rem;
 
     border-radius: 20px;
     border: none;
     outline: none;
 
     z-index: 3;
+}
+
+label {
+    font-size: 1.2rem;
 }
